feat: Implement startup entry management with domain-driven design
This commit introduces a domain-driven design for managing startup entries, enhancing testability and maintainability.

Key changes include:

- **Domain Layer:**
    - Defined core domain models (StartupEntry, ExecutionMode, StartupCommand) in `src/domain/models.rs`.
    - Introduced a StartupRepository trait for data access abstraction in `src/domain/repository.rs`.
    - Implemented a StartupValidator for input validation in `src/domain/validator.rs`.
    - Added unit tests for domain models and validator.
- **Application Layer:**
    - Created use cases for adding, removing, and listing startup entries in `src/application`.
    - Implemented validation logic using the StartupValidator.
- **Infrastructure Layer:**
    - Implemented a Windows Registry-based StartupRepository in `src/infrastructure/registry.rs`.
    - Added ProcessManager for extracting executable names from commands.
    - Included unit tests for process management.
- **Integration Tests:**
    - Added integration tests in `tests/integration_test.rs` to verify the interaction between layers.
- **Refactor:**
    - Updated `src/lib.rs` to expose the modules.
    - Modified `Cargo.toml` to include necessary dependencies.
    - Updated `src/application/kill_process.rs` to use the new `ProcessManager` for extracting the executable name.

This structure allows for easier swapping of infrastructure implementations (e.g., using a different registry or configuration store) without affecting the core application logic.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,10 @@ name = "windows_startup_manager"
 version = "0.1.0"
 edition = "2024"
 
+[lib]
+name = "windows_startup_manager"
+path = "src/lib.rs"
+
 [dependencies]
 # For command-line argument parsing
 clap = { version = "4.5.48", features = ["derive"] }
